[project]
name = "dumate-harbor-tb2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "harbor>=0.4.0",
    "requests>=2.33.1",
]

[project.scripts]
dumate-harbor-tb2 = "dumate_harbor_tb2:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
